<?xml version="1.0"?>
<package format="2">
  <name>puppy-ibvs</name>
  <version>0.0.0</version>
  <description>C++ ROS App inside Docker</description>
  <maintainer email="jonas.orlaineta02@gmail.com">Jonathan Piña</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
